--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
 </head>
 <body>
     <div class="center">
-        <h1>Quer namorar comigo?</h1>
+        <h1>Vamos fazer nossos amores se conhecerem?</h1>
     </div>
     <div class="img"></div>
     <div class="btn">
         <button id="sim">
-            <a href="https://www.youtube.com/watch?v=F3yQajlMfWs" target="_blank">Sim</a></button>
+            <a href="https://www.youtube.com/watch?v=i_WTHkBuqbg&t=0s" target="_blank">Sim</a></button>
         <button id="nao">Não</button>
     </div>
 </body>
